// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marking last incorrect answer correct locks toggles 1`] = `
<DocumentFragment>
  <div
    class="TogglesQuestion correct"
  >
    <h1>
      An animal cell contains:
    </h1>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 0%; top: 0px;"
      />
      <div
        class="ToggleOption selected"
      >
        Cell wall
      </div>
      <div
        class="ToggleOption"
      >
        Ribosomes
      </div>
    </div>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 0%; top: 0px;"
      />
      <div
        class="ToggleOption selected"
      >
        Cytoplasm
      </div>
      <div
        class="ToggleOption"
      >
        Chloroplast
      </div>
    </div>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 50%; top: 0px;"
      />
      <div
        class="ToggleOption"
      >
        Partial membrane
      </div>
      <div
        class="ToggleOption selected"
      >
        Impermeable membrane
      </div>
    </div>
    <h2>
      The answer is correct!
    </h2>
  </div>
</DocumentFragment>
`;

exports[`marking last incorrect answer correct updates status text 1`] = `
<DocumentFragment>
  <div
    class="TogglesQuestion correct"
  >
    <h1>
      An animal cell contains:
    </h1>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 0%; top: 0px;"
      />
      <div
        class="ToggleOption selected"
      >
        Cell wall
      </div>
      <div
        class="ToggleOption"
      >
        Ribosomes
      </div>
    </div>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 0%; top: 0px;"
      />
      <div
        class="ToggleOption selected"
      >
        Cytoplasm
      </div>
      <div
        class="ToggleOption"
      >
        Chloroplast
      </div>
    </div>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 50%; top: 0px;"
      />
      <div
        class="ToggleOption"
      >
        Partial membrane
      </div>
      <div
        class="ToggleOption selected"
      >
        Impermeable membrane
      </div>
    </div>
    <h2>
      The answer is correct!
    </h2>
  </div>
</DocumentFragment>
`;

exports[`renders the component 1`] = `
<DocumentFragment>
  <div
    class="TogglesQuestion incorrect"
  >
    <h1>
      An animal cell contains:
    </h1>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 0%; top: 0px;"
      />
      <div
        class="ToggleOption selected"
      >
        Cell wall
      </div>
      <div
        class="ToggleOption"
      >
        Ribosomes
      </div>
    </div>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 50%; top: 0px;"
      />
      <div
        class="ToggleOption"
      >
        Cytoplasm
      </div>
      <div
        class="ToggleOption selected"
      >
        Chloroplast
      </div>
    </div>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 0%; top: 0px;"
      />
      <div
        class="ToggleOption selected"
      >
        Partial membrane
      </div>
      <div
        class="ToggleOption"
      >
        Impermeable membrane
      </div>
    </div>
    <h2>
      The answer is incorrect
    </h2>
  </div>
</DocumentFragment>
`;

exports[`toggling an option marks it as selected 1`] = `
<DocumentFragment>
  <div
    class="TogglesQuestion incorrect"
  >
    <h1>
      An animal cell contains:
    </h1>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 50%; top: 0px;"
      />
      <div
        class="ToggleOption"
      >
        Cell wall
      </div>
      <div
        class="ToggleOption selected"
      >
        Ribosomes
      </div>
    </div>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 50%; top: 0px;"
      />
      <div
        class="ToggleOption"
      >
        Cytoplasm
      </div>
      <div
        class="ToggleOption selected"
      >
        Chloroplast
      </div>
    </div>
    <div
      class="Toggle"
    >
      <div
        class="slider"
        style="width: 50%; height: 100%; left: 0%; top: 0px;"
      />
      <div
        class="ToggleOption selected"
      >
        Partial membrane
      </div>
      <div
        class="ToggleOption"
      >
        Impermeable membrane
      </div>
    </div>
    <h2>
      The answer is incorrect
    </h2>
  </div>
</DocumentFragment>
`;
